--- a/WebServerExample/appsettings.json
+++ b/WebServerExample/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": ""
+    "DefaultConnection": "Server=localhost;Port=5432;Database=postgres;UID=postgres;PWD=123"
   }
 }
